QDoc: Fix tag-files for enum types and values

* Use correct tag member name.
* Use correct tag names when writing tag-files.
* Also prefer ranged-for in a loop.

Fixes: QTBUG-61790
Change-Id: I486fcd125f473f72c497ccbd1e9f7baa371bcebc
Done-With: Maxim Paperno <max@wdg.us>
Reviewed-by: Maxim Paperno <max@wdg.us>
Reviewed-by: Venugopal Shivashankar <Venugopal.Shivashankar@qt.io>
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>